# Artha-Projekt

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish_action.yml
nodes/: __init__.py
nodes/prj/: project.py
