[project]
name = "Artha-Projekt"
description = "ComfyUI custom nodes for project management"
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/Cyrostar/Artha-Projekt"

[tool.comfy]
PublisherId = "Cyrostar"
DisplayName = "Artha-Projekt"
Icon = "🔱"
